--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         
         <div class="postButtons">
-            <button class="yellow-button" type="button">All posts</button>
+            <button onclick="navigateToPostList()" class="yellow-button" type="button">All posts</button>
             <button onclick="showCreatePost()" class="yellow-button" type="button">Create post</button>
           </div>
     </div>
