--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
               <hr>
               <form>
                 <label for="username" class="label-text">Username</label>
-                <input type="text" id="username" placeholder="Enter Username" required>
+                <input type="text" placeholder="Enter Username" required>
                 <label for="password" class="label-text">Password</label>
-                <input type="password" id="password" placeholder="Enter Password" required>
+                <input type="password" placeholder="Enter Password" required>
                 <button type="submit" class="signin-btn">Sign In</button>
               </form>
               <p class=bottom-banner>Not a member?<span onclick="hideSignInModal();showSignUpModal()" class=signup>Sign Up</span></p>
@@ -62,13 +62,13 @@
               <hr>
               <form>
                 <label for="name" class="label-text">Name</label>
-                <input type="text" id="name" placeholder="Enter Your Name" required>
+                <input type="text" placeholder="Enter Your Name" required>
                 <label for="username" class="label-text">Username</label>
-                <input type="text" id="username" placeholder="Enter Your Username" required>
+                <input type="text" placeholder="Enter Your Username" required>
                 <label for="password" class="label-text">Password</label>
-                <input type="password" id="password" placeholder="Enter Your Password" required>
+                <input type="password" placeholder="Enter Your Password" required>
                 <label for="confirmpassword" class="label-text">Confirm Password</label>
-                <input type="password" id="confirm_password" placeholder="Re-enter Your Password" required>
+                <input type="password" placeholder="Re-enter Your Password" required>
                 <button type="submit" class="signin-btn">Sign up</button>
               </form>
             </div>
